Adicionados os arquivos zip, terminada aula 4 e iniciada a aula 5.

--- a/zip/1846-kubernetes-Aula3/portal-noticias.yaml
+++ b/zip/1846-kubernetes-Aula3/portal-noticias.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: portal-de-noticias
+  name: portal-noticias
 spec:
   containers:
-    - name: portal-de-noticias
+    - name: portal-noticias-container
       image: aluracursos/portal-noticias:1
