--- a/aula15/portal-noticias-hpa.yaml
+++ b/aula15/portal-noticias-hpa.yaml
@@ -1,13 +1,18 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: portal-noticias-hpa
-  namespace: default
 spec:
-  maxReplicas: 10
-  minReplicas: 1
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: portal-noticias-deployment
-  targetCPUUtilizationPercentage: 50
+  minReplicas: 1
+  maxReplicas: 10
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50
